<resources>
    <string name="app_name">UC Express</string>
    <string name="action_settings">Settings</string>
    <string name="Password">Password</string>
    <string name="rePassword">Re-enter Password</string>
    <string name="Login">Login</string>
    <string name="email">email</string>
    <string name="title">UC Express</string>
    <string name="Register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="uName">User Name</string>
    <string name="pNo">Phone Number</string>
    <string name="resdet">Restaurant Details</string>
    <string name="events">Events</string>
    <string name="utility">Utility Shop Items</string>
    <string name="cp">change profile</string>
    <string name="feedback">feedback</string>
    <string name="otherFacility">other Facilities</string>
    <string name="foodcourt">food Court</string>
    <string name="cc">Connection Cafe</string>
    <string name="subway">subway</string>
    <string name="Restaurantname">Restaurant Name</string>
    <string name="Menu">Menu</string>
    <string name="Openhours">Open Hours</string>
    <string name="chickfila">Chick-fil-A</string>
    <string name="pandaexpress">Panda Express</string>
    <string name="moes">Moes</string>
    <string name="sushic">Sushic</string>
    <string name="subop">Monday-Thursday: 7:30am - 10:30pm\r\nFriday: 7:30am - 5pm\r\nSaturday - Sunday: Closed</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
